--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "aos": "^2.3.4",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.3",
     "motion": "^11.18.2",
-      "react": "^18.3.1",
+    "react": "^18.3.1",
     "react-animate-on-scroll": "^2.1.9",
     "react-awesome-shapes": "^0.1.12",
     "react-dom": "^18.3.1",
@@ -38,6 +39,6 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
-    "vite": "^5.4.8"
+    "vite": "^6.3.2"
   }
 }
