--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "aos": "^2.3.4",
     "axios": "^1.8.4",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.6.3",
     "motion": "^11.18.2",
     "react": "^18.3.1",
@@ -23,6 +24,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.3",
+    "react-spinners": "^0.17.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
