--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.4",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.6.3",
+    "js-cookie": "^3.0.5",
     "motion": "^11.18.2",
     "react": "^18.3.1",
     "react-animate-on-scroll": "^2.1.9",
